# betagui

./: .gitignore  .python-version  CONTROL_ROOM.md  DEVELOPMENT.md  README.md  mkdocs.yml  requirements-dev.txt
CS_studio/: README.md  generate_ssmb_cs_plots.py  orignal--leo_20260502_SSMB_PoPII_scanshots.plt
SSMB/: README.md  __init__.py  ssmb_gui.py
SSMB_experiment/: .gitignore  README.md  TODO.md  monitor_window_sandbox.py  profile_monitor_render.py  ssmb_experiment_gui.py  ssmb_gui.py
control_room/: betagui.py  betagui_cli.py  betagui_cli_safe.py  betagui_safe.py  machine_check.py  ssmb_monitor.py
development/: betagui.py
docs/: README_depricated.md  code_walkthrough.md  control_room_git_setup.md  control_room_test_plan.md  development_workflow.md  feature_parity.md  gitlab_docs_plan.md  index.md  open_features.md  porting_notes.md  pv_inventory.md  reference_context.md  runtime_checklist.md  setup.md  testing_workflow.md  theory_and_operation.md  write_paths.md
laser_mirrors/: MOTOR_CONTROLLER_NOTES.md  README.md  laser_mirrors_gui.py  laser_optics_digital_twin.py
mlsreflat-main/: ._.gitlab-ci.yml  .gitignore
original/: ._betagui.py  SUwithoutorbitbumpResMat.txt  SUwithoutorbitbumpResMat2D.txt  betagui.py
support/mlsreflat-main/: .gitlab-ci.yml  README.md  pyproject.toml
support/mlsreflat-main/examples/storage_ring/: mls_storage_ring.ipynb
support/mlsreflat-main/src/mlsreflat/storage_ring/: lattice.py  mls_storage_ring_power_supplies.json
support/mlsreflat-main/src/mlsreflat/storage_ring/data/: mls_storage_ring_low_emittance.csv
(+291 files in other folders)
